--- a/web/agregarEmpleado.xhtml
+++ b/web/agregarEmpleado.xhtml
@@ -5,69 +5,111 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:f="http://java.sun.com/jsf/core"
-                xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:p="http://primefaces.org/ui" xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
-                template="/WEB-INF/templeate/Layout.xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui" xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      >
 
     <h:head>
         <title>TODO supply a title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
-    <ui:define name="cuerpo">
 
-        <h:form>
-            <h:panelGrid>
+    <div class="Container100">
+        <div class="ContainerIndent">
+            <div class="ShadowBox TexAlCenter whiteback BlueBorderedBox">
+                <h1 class="BigTopic">Empleados de Seguridad Privada</h1>
+                <span class="gray">Sección de adminstración de Empleados</span>
+            </div>
 
-                <p:outputLabel for="num" value="Numero "></p:outputLabel>
-                <p:inputText id="num" label="Ingresar numero" value="#{empleadoUI.empleadoHelper.numero}" required="true"/>
-                <p:message for="num"/>
+            <div class="ShadowBox whiteback RedBorderedBox ui-fluid">
+                <div class="Container100 Responsive100">
+                    <h:form id="carmesi">
+                        <p:messages id="messages" autoUpdate="true" />
+                        <h:panelGrid id="formulario">
+                            <h:panelGrid id="inputsEmpleado" columns="3">
 
-                <p:outputLabel value="Nombre "></p:outputLabel>
-                <p:inputText label="Ingresar Nombre" value="#{empleadoUI.empleadoHelper.nombre}"/>
-
-                <p:outputLabel for="ap" value="apellido paterno"></p:outputLabel>
-                <p:inputText id="ap" label="Ingresar Apellido Paterno" value="#{empleadoUI.empleadoHelper.ap}" required="true"/>
-                <p:message for="ap"/>
-
-                <p:outputLabel for="am" value="apellido materno "></p:outputLabel>
-                <p:inputText id="am" label="Ingresar Apellido materno" value="#{empleadoUI.empleadoHelper.am}"/>
-                <p:message for="am"/>
-
-                <p:outputLabel for="select" value="Servicio: "></p:outputLabel>
-                <p:selectOneMenu id="select" value="#{empleadoUI.empleadoHelper.te}" required="true" label="selectte"
-                                 filter="true" filterMatchMode="contains">
-                    <f:selectItem value="Seleccione" noSelectionOption="true"/>
-                    <f:selectItems value="#{empleadoUI.listTipoEmpleado}" var="entidad" 
-                                   itemValue="#{entidad.idTipoEmpleado}" itemLabel="#{entidad.tipoEmpleado}"/>
-                </p:selectOneMenu>
-                <p:message for="select"/>
-
-                <h:commandButton value="Aceptar" actionListener="#{empleadoUI.empleadoHelper.insertPersonaEmpleado()}"></h:commandButton>
-            </h:panelGrid>
+                                <p:outputLabel value="Numero "></p:outputLabel>
+                                <p:inputText id="num" label="Ingresar numero" value="#{empleadoUI.empleadoHelper.currentEmpleado.numeroEmpleado}" required="true"/>
+                                <p:message for="num"/>
 
 
 
+                                <p:outputLabel value="Nombre "></p:outputLabel>
+                                <p:inputText id="nom" label="Ingresar Nombre" value="#{empleadoUI.empleadoHelper.currentEmpleado.fkIdPersona.nombre}" required="true"/>
+                                <p:message for="nom"/>
 
-            <p:dataTable var="emp" value="#{empleadoUI.listEmpleados}">
+                                <p:outputLabel value="Apellido paterno"></p:outputLabel>
+                                <p:inputText id="ap" label="Ingresar Apellido Paterno" value="#{empleadoUI.empleadoHelper.currentEmpleado.fkIdPersona.apellidoPaterno}" required="true"/>
+                                <p:message for="ap"/>
 
-                <p:column headerText="Id">
-                    <h:outputText value="#{emp.idEmpleado}" />
-                </p:column>
-                <p:column headerText="Numero">
-                    <h:outputText value="#{emp.numeroEmpleado}" />
-                </p:column>
-                <p:column headerText="TipoEmpleado">
-                    <h:outputText value="#{emp.fkIdTipoEmpleado.tipoEmpleado}" />
-                </p:column>
-                <p:column headerText="Nombre">
-                    <h:outputText value="#{emp.fkIdPersona.nombre}" />
-                </p:column>
-                <p:column headerText="Apellido">
-                    <h:outputText value="#{emp.fkIdPersona.apellidoPaterno}" />
-                </p:column></p:dataTable>
-        </h:form>
-    </ui:define>   
-</ui:composition>
+
+                                <p:outputLabel value="Apellido materno "></p:outputLabel>
+                                <p:inputText id="am" label="Ingresar Apellido materno" value="#{empleadoUI.empleadoHelper.currentEmpleado.fkIdPersona.apellidoMaterno}"/>
+                                <p:message for="am"/>
+
+                                <h:outputText value="Tipo de empleado"/>
+
+                                <p:selectOneMenu id="txt3" value="#{empleadoUI.empleadoHelper.te}" required="true" label="Text 3">
+                                    <f:selectItems value="#{empleadoUI.listTipoEmpleado}" var="entidad" itemValue="#{entidad.idTipoEmpleado}" itemLabel="#{entidad.tipoEmpleado}"/>
+                                </p:selectOneMenu> 
+                                <p:message for="txt3"/>
+
+                            </h:panelGrid>
+                            <h:panelGrid id="buttonsCrud" columns="3">
+
+                                <p:commandButton value="Agregar" actionListener="#{empleadoUI.empleadoHelper.insertPersonaEmpleado()}" ajax="true" update="@form">
+                                    <p:confirm header="Confirmation" message="Are you sure?" icon="ui-icon-alert" />
+                                </p:commandButton>
+                                <p:commandButton value="Actualizar" actionListener="#{empleadoUI.empleadoHelper.actualizarPersonaEmpleado()}" ajax="true" update="@form">
+                                    <p:confirm header="Confirmation" message="Are you sure?" icon="ui-icon-alert" />
+                                </p:commandButton>
+
+                                <p:commandButton value="Eliminar" action="#{empleadoUI.empleadoHelper.eliminar()}" ajax="true" update="@form">
+                                    <p:confirm header="Confirmation" message="Are you sure?" icon="ui-icon-alert" />
+                                </p:commandButton>
+                                
+                                <p:commandButton value="Cancelar" actionListener="#{empleadoUI.empleadoHelper.cancelar()}" ajax="false" update="@form">
+
+                                </p:commandButton>
+                            </h:panelGrid>
+
+                            <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+                                <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+                                <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+                            </p:confirmDialog>
+
+                        </h:panelGrid>
+
+                        <p:dataTable var="emp" value="#{empleadoUI.listEmpleados}" selectionMode="single" selection="#{empleadoUI.empleado}" rowKey="#{emp.idEmpleado}"                                        rows="10" paginator="true" paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                     rowsPerPageTemplate="5,10,15" emptyMessage="No empleados found with given criteria" reflow="true">
+                            <p:ajax event="rowSelect" update="@form" listener="#{empleadoUI.stateChange(behavior)}"/>
+
+                            <p:column headerText="Id">
+
+                                <h:outputText value="#{emp.idEmpleado}" />
+                            </p:column>
+                            <p:column headerText="Numero">
+                                <h:outputText value="#{emp.numeroEmpleado}" />
+                            </p:column>
+                            <p:column headerText="TipoEmpleado">
+                                <h:outputText value="#{emp.fkIdTipoEmpleado.tipoEmpleado}" />
+                            </p:column>
+                            <p:column headerText="Nombre">
+                                <h:outputText value="#{emp.fkIdPersona.nombre}" />
+                            </p:column>
+                            <p:column headerText="Apellido">
+                                <h:outputText value="#{emp.fkIdPersona.apellidoPaterno}" />
+                            </p:column>
+                        </p:dataTable>
+                    </h:form>
+
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+</html>
