--- a/web/WEB-INF/templeate/footer.xhtml
+++ b/web/WEB-INF/templeate/footer.xhtml
@@ -1,18 +1,18 @@
-<ui:composition 
+<ui:composition
 
-    xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:f="http://java.sun.com/jsf/core"
-    xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:ui="http://java.sun.com/jsf/facelets"
-    xmlns:p="http://primefaces.org/ui">
+        xmlns="http://www.w3.org/1999/xhtml"
+        xmlns:f="http://java.sun.com/jsf/core"
+        xmlns:h="http://java.sun.com/jsf/html"
+        xmlns:ui="http://java.sun.com/jsf/facelets"
+        xmlns:p="http://primefaces.org/ui">
 
 
     <!-- FOOTER  -->
     <footer>Terminos y condiciones "Footer"</footer>
     <div>
-        Hola:   <h:outputLabel value="#{usuarioUILogin.usuario.userName}"></h:outputLabel>
+        Hola:
+        <h:outputLabel value="#{usuarioUILogin.usuario.userName}"></h:outputLabel>
     </div>
-  
-    
+
 
 </ui:composition>
